<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hexocolor_one"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgViewProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/berns"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:shapeAppearanceOverlay="@style/circular"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgViewProfilePic"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/imgViewProfilePic"
        app:layout_constraintTop_toBottomOf="@+id/imgViewProfilePic"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_location"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/influenza"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_edit_display"
        android:textColor="@color/white"
        app:circularflow_viewCenter="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/txtLocation"
        app:layout_constraintTop_toBottomOf="@+id/txtLocation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAboutMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/influenza"
        android:drawableLeft="@drawable/about_icon"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/header_about_me"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtAboutMeDetails"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_chainStyle="spread"
        tools:layout_editor_absoluteX="-130dp" />

    <TextView
        android:id="@+id/txtAboutMeDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/about_me_details"
        app:layout_constraintBottom_toTopOf="@+id/txtInterests"
        app:layout_constraintTop_toBottomOf="@+id/txtAboutMe"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/txtInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/influenza"
        android:drawableLeft="@drawable/interest_icon"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/header_interest"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtInterestDetails"
        app:layout_constraintTop_toBottomOf="@+id/txtAboutMeDetails"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/txtInterestDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/interest_details"
        app:layout_constraintBottom_toTopOf="@+id/txtEducation"
        app:layout_constraintTop_toBottomOf="@+id/txtInterests"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/txtEducation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/influenza"
        android:drawableLeft="@drawable/school_icon"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/header_education"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtEducationDetails"
        app:layout_constraintTop_toBottomOf="@+id/txtInterestDetails"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/txtEducationDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/education_details"
        app:layout_constraintBottom_toTopOf="@+id/txtExperience"
        app:layout_constraintTop_toBottomOf="@+id/txtEducation"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/txtExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/influenza"
        android:drawableLeft="@drawable/work_icon"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/header_experience"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtExpDetails"
        app:layout_constraintTop_toBottomOf="@+id/txtEducationDetails"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/txtExpDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/experience_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExperience"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>